--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     </h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore more</button>
+                    <button class="btn btn-primary bg-gradient-to-r from-start to-end text-white border-none">Explore more <i class="fa-solid fa-location-arrow"></i></button>
                 </div>
                 <div>
-                    <img src="images/banner.png" class="max-w-xs" />
+                    <img src="images/banner.png" />
                     <!-- rating badge -->
                     <div class="flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 -mt-16">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -149,7 +149,7 @@
                         alteration in some form, by injected humour, or randomised words which don't look even slightly
                         believable.
                     </p>
-                    <button class="btn btn-primary">Show All</button>
+                    <button class="btn btn-primary bg-white text-orange-500 border-orange-500">Show All</button>
                 </div>
             </div>
             <!-- review container -->
@@ -201,7 +201,7 @@
         </section>
 
     </main>
-    <footer class="px-48 py-10 bg-base-200 text-base-content">
+    <footer class="p-10 lg:px-48 py-10 bg-base-200 text-base-content">
         <div class="flex justify-between my-24">
             <img src="images/cup.png" alt="">
             <p>
